<resources>
    <string name="app_name">Social Media</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_up_with_facebook">Sign up with Facebook</string>
    <string name="sign_up_with_google">Sign up with Google</string>
    <string name="let_s_sign_you_in">Let\'s sign you in</string>
    <string name="we_ve_missed_you">We\'ve missed you</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="password">Password</string>
    <string name="log_in">Log in</string>
    <string name="your_email_or_phone_number">Your Email or phone number</string>
    <string name="enter_your_email_address_or_phone_number_if_an_account_exist_you_ll_get_an_activation_code">Enter your email address or phone number. If an account exist you’ll get an activation code.</string>
    <string name="forgot_password1">Forgot Password?</string>
    <string name="an_authentication_code_has_been_sent_to">An Authentication code has been sent to</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="code_sent_resent_code_in">Code sent. Resent code in</string>
    <string name="next">Next</string>
    <string name="your_email">Your email</string>
    <string name="your_name">Your name</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="consul_design">Consul Design</string>
    <string name="your_password">Your password</string>
    <string name="refill_your_password">Refill your password</string>
    <string name="create_an_account">Create an account</string>
    <string name="choose_preferences">Choose Preferences</string>
    <string name="we_ll_use_this_to_personalized_your_feed_n_select_at_least_3_options">We\'ll use this to personalized your feed.\n Select at least 3 options:</string>
    <string name="finance">Finance</string>
    <string name="complete_registation">Complete Registation</string>
    <string name="this_username_is_not_available_try_again">This username is not available. Try again</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="sign_in">Sign in</string>
    <string name="hehe">640231531045-8qgrdqpddm9npl79uvcd329diptiutjb.apps.googleusercontent.com</string>
    <string name="facebook_app_id">255275300953721</string>
    <string name="facebook_client_token">507f9788407c2e0289f81d4da8a7703d</string>
    <string name="send">Send</string>
    <string name="this_email_is_not_true_try_again">This email is not true. Try again</string>
    <string name="channel_post_notifi">Thông báo post notification</string>
    <string name="post_notifi">post notification</string>
    <string name="title_notifications">Notifications</string>
    <string name="sign_up">Sign up</string>
    <string name="txt_profile">Profile</string>
    <string name="txt_followers">Followers</string>
    <string name="txt_following">Following</string>
    <string name="txt_edit_profile">Edit Profile</string>
    <string name="txt_250k">250k</string>
    <string name="txt_380k">380k</string>
    <string name="txt_name">Monster Baby</string>
    <string name="txt_rank">\@mister_teju</string>
    <string name="txt_interest">I am an easy going person that loves playing football and music</string>
    <string name="txt_location">Ikeja, Lagos</string>
    <string name="txt_link">Linktr.ee/Monster</string>
    <string name="txt_posts">Posts</string>
    <string name="txt_comments">Comments</string>
    <string name="txt_media">Media</string>
    <string name="txt_hearts">Hearts</string>
    <string name="txt_time">5h ago</string>
    <string name="txt_artist">Artist</string>
    <string name="txt_comment">Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id es occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id es</string>
    <string name="txt_23">23</string>
    <string name="txt_actiopns">Actiopns</string>
    <string name="txt_bookmarks">Bookmarks</string>
    <string name="txt_friends_nearby">Friends Nearby</string>
    <string name="txt_blocks">Blocks</string>
    <string name="txt_socials">Socials</string>
    <string name="txt_facebook">Facebook</string>
    <string name="txt_instagram">Instagram</string>
    <string name="txt_twitter">Twitter</string>
    <string name="txt_linkedin">LinkedIn</string>
    <string name="txt_settings">Settings</string>
    <string name="txt_help">Help</string>
    <string name="txt_notifications">Notifications</string>
    <string name="txt_activities">Activities</string>
    <string name="txt_campaigns">Campaigns</string>
    <string name="txt_mentions">Mentions</string>
    <string name="txt_notification">Infinix Nigenia started following you to help promote it’s brand</string>
    <string name="txt_2h">2h</string>
    <string name="txt_follow_back">Follow back</string>
    <string name="txt_birthday">20/10/1992</string>
    <string name="txt_ag_baby">AG Baby</string>
    <string name="txt_introduce">I am an easy going person that loves playing football and music</string>
    <string name="txt_cancel">Cancel</string>
    <string name="txt_remove">Remove this follower</string>
    <string name="txt_goi_y">Gợi ý dành cho bạn</string>
    <string name="txt_account_details">Account Details</string>
    <string name="txt_language">Language</string>
    <string name="txt_privacy_policy">Privacy Policy</string>
    <string name="txt_contact_support">Contact Support</string>
    <string name="txt_switch_account">Switch Account</string>
    <string name="txt_logout">Confirm logout?</string>
    <string name="txt_add_account">Add Account</string>
    <string name="txt_english">English</string>
    <string name="txt_vietnamese">Vietnamese</string>
    <string name="txt_personal_info">Personal info</string>
    <string name="txt_username">Username</string>
    <string name="txt_john_adisa">John Adisa</string>
    <string name="txt_delete_account">Delete Account</string>
    <string name="txt_change_username">Change Username</string>
    <string name="txt_change_user_name">You can change your username only once in a month.</string>
    <string name="txt_old">Old</string>
    <string name="txt_new">New</string>
    <string name="txt_save_changes">Save Changes</string>
    <string name="txt_comment_post">Comment</string>
    <string name="txt_hint_comment">Write a comment</string>
    <string name="txt_view_avatars">View avatars</string>
    <string name="txt_change_your_avatar">Change your avatar</string>
    <string name="txt_h">5h ago</string>
    <string name="txt_reply">Reply</string>
    <string name="chats_title">Chats</string>
    <string name="write_a_message">Write a message</string>
    <string name="new_messages">New messages</string>
    <string name="to">To:</string>
    <string name="please_enter_name_or_group">Please enter name or group</string>
    <string name="group_chat">Group chat</string>
    <string name="suggest">Suggest</string>
    <string name="create">CREATE</string>
    <string name="name_group">Name group:</string>
    <string name="optional">(Optional)</string>
    <string name="search">Search</string>
    <string name="mini_game">Mini Game</string>
    <string name="haven_t_joined_us_yet">Haven\'t joined us yet?</string>
    <string name="area">South Korea</string>
    <string name="question">Câu 25/120</string>
    <string name="percent">15%</string>
    <string name="tv_national">Brazil</string>
    <string name="tv_number_question">0/180</string>
    <string name="tv_country">Quốc gia</string>
    <string name="feed_back">Nhận xét</string>
    <string name="what_you_need_help">Bạn cần giúp đỡ gì?</string>
    <string name="tv_confirm">Bạn có muốn xóa kí tự này </string>
    <string name="tv_unlock">Bạn có muốn mở khóa câu trả lời này với </string>
    <string name="tv_release">Bạn đã vượt qua câu hỏi này rồi! Nếu bạn muốn chơi lại câu hỏi này, bạn sẽ không nhận được xu. Bạn có muốn?</string>
    <string name="splash_intro">Giúp bạn có thêm niềm vui và kiến thức với trò chơi đoán chữ</string>
    <string name="share">Chia sẻ</string>
    <string name="support">Hỗ trợ</string>
    <string name="rate_app">Đánh giá ứng dụng</string>
    <string name="term_of_use">Điều khoản sử dụng</string>
    <string name="privacy_policy">Chính sách bảo mật</string>
    <string name="txt_remove_this_follower">Remove this follower</string>
    <string name="txt_share">Share</string>
    <string name="txt_block">Block</string>
    <string name="txt_notification_block">They will not be able to message you or find your profile or content.</string>
    <string name="txt_notification_block2">They will not be notified when you block them.</string>
    <string name="txt_notification_block3">Unblocking them is possible at any time in the settings.</string>
    <string name="txt_chat">Chat</string>
    <string name="txt_post">Post</string>
    <string name="txt_post_baby">AG Baby’s posts</string>
    <string name="txt_date_0f_birth">20/10/1992</string>
    <string name="txt_description">Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id es occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id es</string>
    <string name="txt_learn_more">Learn more</string>
    <string name="txt_blocked">Blocked</string>
    <string name="txt_you_do_not_have_any_blocked_profile">You do not have any \n blocked profile</string>
    <string name="txt_monster_baby">namne</string>
    <string name="txt_public">Public</string>
    <string name="txt_type_here">Type here ....</string>
    <string name="txt_time_video">00:30</string>
    <string name="you_don_t_have_any_chat">You don\'t have any chat</string>
    <string name="view_profile_chat">View profile</string>
    <string name="search_single_chat">Search</string>
    <string name="block_single_chat">BLOCK</string>
    <string name="un_block_single_chat">UNBLOCK</string>
    <string name="clear_single_chat">Clear chat</string>
    <string name="birthday">Birthday</string>
    <string name="display_name">Display name</string>
    <string name="bio">Bio</string>
    <string name="cancel">CANCEL</string>
    <string name="recent_searches">Recent searches</string>
    <string name="edit">Edit</string>
    <string name="blocked">The user has been blocked</string>
    <string name="delete">DELETE</string>
    <string name="text_request_camera">You need to grant camera access permission to use this function</string>
    <string name="text_request_record">You need to grant record access permission to use this function</string>
    <string name="text_request_photo">You need to grant photo access permission to use this function</string>
    <string name="text_des_block_other_user">You cannot contact each other in this chat</string>
    <string name="text_un_block_user">unblock users?</string>
    <string name="text_des_un_block_user">You will receive new messages from the user.</string>
    <string name="text_block_user">Are you sure to block this user?</string>
    <string name="txt_change_email">Your email has been linked to your account. You can change it below.</string>
    <string name="txt_example_example_com">example@example.com</string>
    <string name="txt_email_change">Change Email</string>
    <string name="txt_description_about">Add a description about yourself to help people understand you better</string>
    <string name="txt_personal_biography">Personal biography</string>
    <string name="txt_save">Save</string>
    <string name="txt_add_anything_such_as_your_motto_or_hobbies">Add anything such as your motto or hobbies</string>
    <string name="txt_edit_description">Edit description about yourself</string>
    <string name="txt_do_you_want_to_logout">Do you want to logout?</string>
    <string name="txt_xoa">OK</string>
</resources>