<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:background="@drawable/background_dialog_delete"
        android:clickable="true"
        android:focusable="true"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:paddingHorizontal="24dp"
            android:text="@string/txt_logout"
            android:textColor="@color/color_blue_01"
            android:textSize="18sp"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:paddingHorizontal="24dp"
            android:text="@string/txt_do_you_want_to_logout"
            android:textColor="@color/color_gray_01"
            android:textSize="14sp" />

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:gravity="end">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvCancel"
                android:layout_width="wrap_content"
                android:fontFamily="@font/mo"
                android:paddingHorizontal="15dp"
                android:paddingVertical="5dp"
                android:text="@string/cancel"
                android:textAllCaps="false"
                android:textColor="@color/color_gray_02"
                android:textSize="14sp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvOk"
                android:layout_width="wrap_content"
                android:layout_marginEnd="15dp"
                android:paddingHorizontal="15dp"
                android:paddingVertical="5dp"
                android:text="@string/txt_xoa"
                android:textAllCaps="false"
                android:textColor="@color/color_blue_01"
                android:textSize="14sp" />

        </TableRow>
    </LinearLayout>
</LinearLayout>

